--- a/TTFPortal/Views/Account/Login.cshtml
+++ b/TTFPortal/Views/Account/Login.cshtml
@@ -89,7 +89,9 @@
                         </div>
                         <!--end::Signin-->
                     </div>
-                    <div class="col-lg-6 bgi-size-contain bgi-no-repeat bgi-position-y-center bgi-position-x-center min-h-150px mt-10 m-md-0" style="background-image:url('Content/images/Background.png')"></div>
+                    <div class="col-lg-6 bgi-size-contain bgi-no-repeat bgi-position-y-center bgi-position-x-center min-h-150px mt-10 m-md-0">
+                        <img  src="/Content/images/Background1.png" alt="Logo TTF" />
+                    </div>
                 </div>
             </div>
             <!--end::Body-->
