--- a/TTFPortal/Views/NhanSu/DSInTheTen.cshtml
+++ b/TTFPortal/Views/NhanSu/DSInTheTen.cshtml
@@ -170,35 +170,33 @@
                      columns: [{
                          dataField: "MaNV",
                          caption: "Mã nhân viên",
-                         width: 100,
                          allowEditing: false, fixed: true
                      }, {
                          dataField: "HoVaTen",
                          caption: "Họ và tên",
-                         width: 150,
                          allowEditing: false, fixed: true
                      },
                      {
                          dataField: "NgayVaoCongTy",
                          caption: "Ngày vào công ty",
-                         width: 150, allowEditing: false
+                          allowEditing: false
 
                      },
                      {
                          dataField: "TenPhong_PhanXuong",
                          caption: "Tên phòng/Phân xưởng",
-                         width: 120, allowEditing: false, fixed: true
+                          allowEditing: false, fixed: true
                          //fixed: true
                      },
                      {
                          dataField: "TenChucVu",
                          caption: "Tên chức vụ",
-                         width: 200, allowEditing: false, fixed: true
+                         allowEditing: false, fixed: true
                      },
                      {
                          dataField: "Images",
                          caption: "Hình",
-                         width: 200, allowEditing: false, fixed: true
+                         allowEditing: false, fixed: true
                      }
                      ],
                  });
