--- a/TTFPortal/Views/NhanSu/Edit.cshtml
+++ b/TTFPortal/Views/NhanSu/Edit.cshtml
@@ -118,7 +118,7 @@
                                     <!--begin::Top-->
                                     <div class="d-flex">
                                         <!--begin::Pic-->
-                                        <div class="flex-shrink-0 mr-5">
+                                        <div class="flex-shrink-0 mr-5" id="Mobile">
                                             <div class="col-lg-9 col-xl-6">
                                                 <div class="image-input image-input-outline" id="kt_image_4">
                                                     <div class="image-input-wrapper" style="background-image:url('@Model.Images')"></div>
@@ -547,9 +547,12 @@
 		        }
 	        };
         }();
-
+        var isMobile;
         $(function () {
-
+            isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+            if (isMobile) {
+                $("#Mobile").css("display", "none");
+            }
             setPhongBan('select-phongban',@Html.Raw(TTFPortal.Class.DanhMuc.DMPhongBan()), true, 'Phòng/Phân xưởng','@Model.MaPhong_PhanXuong.Trim()');
             setChucVu('select-chucvu',@Html.Raw(TTFPortal.Class.DanhMuc.DMChuVu()), true, 'Chức vụ','@Model.MaChucVu');
             setTinhTrang('select-tinhtrang',@Html.Raw(TTFPortal.Class.DanhMuc.DMTinhTrang()), true, 'Tình trạng','@Model.MaTinhTrang');
